Bug 1968672 - Don't change z-axis for view transition transforms. r=view-transitions-reviewers,boris

Fun one... I'll add a trivial reftest if nothing starts passing as a
result of this.

Differential Revision: https://phabricator.services.mozilla.com/D253072